syntax = "proto3";
package auth;

option go_package="./pb";

service AuthService {
  rpc Register(RegisterRequest)returns(RegisterResponse);
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc Validate(ValidateRequest)returns(ValidateResponse);
  rpc NewToken(NewTokenRequest)returns(NewTokenResponse);
  rpc VerifyAccount(VerifyAccountRequest)returns(VerifyAccountResponse);
  rpc GetTokenVeriryAccount(VerifyAccountRequest)returns(VerifyAccountResponse);
}
message Picture {
  uint32 id = 1;
  string url = 2;
  string width = 3;
  string height = 4;
}
message User {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phoneNumber = 4;
  string address = 5;
  Picture avatar = 6;
  string lastLogin = 7;
}
message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string phoneNumber = 5;
  string address = 6;
  string role = 7;
}
message RegisterResponse {
  ErrorResponse error = 1;
}
message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  User information = 1;
  string accessToken = 2;
  string refreshToken = 3;
  uint32 expiresAt = 4;
  string tokenType = 5;
  ErrorResponse error = 6;
}

message ValidateRequest {
  string token = 1;
}
message ValidateResponse {
  int64 userId = 1;
  ErrorResponse error = 2;
}
message ErrorResponse {
  int64 code = 1;
  string message = 2;
}
message NewTokenRequest {
  string refreshToken = 1;
}
message NewTokenResponse {
  string accessToken = 1;
  uint32 expiresAt = 2;
  ErrorResponse error = 3;
}
message VerifyAccountRequest {
  string email = 1;
  string password = 2;
}
message VerifyAccountResponse {
  ErrorResponse error = 1;
}
